Update: Icons & size, color intro

--- a/index.html
+++ b/index.html
@@ -1105,18 +1105,17 @@
 								</div>
 							</div>
 						</div>
-						<div id='portfolio-filters' >
+						<div id='portfolio-filters'>
 							<ul>
 								<li><a href='#' data-group='all' class='active' >All</a></li>
-								<li><a href='#' data-group='html' >HTML</a></li>
-								<li><a href='#' data-group='css' >CSS</a></li>
-								<li><a href='#' data-group='sass' >Sass</a></li>
-								<li><a href='#' data-group='javascript' >JavaScript</a></li>
-								<li><a href='#' data-group='python' >Python</a></li>
+								<li><a href='#' data-group='htmlcss'><i class='ion-social-html5'></i>&<i class='ion-social-css3'></i></a></li>
+								<li><a href='#' data-group='sass'><i class='ion-social-sass'></i></a></li>
+								<li><a href='#' data-group='javascript'><i class='ion-social-javascript'></i></a></li>
+								<li><a href='#' data-group='python'><i class='ion-social-python'></i></a></li>
 							</ul>
 						</div>
 						<div id='portfolio-grid' class='portfolio-items' >
-							<div class='item' data-groups='["all","html","css","javascript"]' >
+							<div class='item' data-groups='["all","htmlcss","javascript"]' >
 								<div class='inner' >
 									<img alt='carrito' src='img/portfolio/carrito.jpg' >
 									<div class='caption' >
@@ -1152,7 +1151,7 @@
 									</div>
 								</div>
 							</div>
-							<div class='item' data-groups='["all","html","css"]' >
+							<div class='item' data-groups='["all","htmlcss"]' >
 								<div class='inner' >
 									<img alt='compushop' src='img/portfolio/compushop.jpg' >
 									<div class='caption' >
@@ -1170,7 +1169,7 @@
 									</div>
 								</div>
 							</div>
-							<div class='item' data-groups='["all","html","css","javascript"]' >
+							<div class='item' data-groups='["all","htmlcss","javascript"]' >
 								<div class='inner' >
 									<img alt='email' src='img/portfolio/email.jpg' >
 									<div class='caption' >
@@ -1224,7 +1223,7 @@
 									</div>
 								</div>
 							</div>
-							<div class='item' data-groups='["all","html","css","sass"]' >
+							<div class='item' data-groups='["all","htmlcss","sass"]' >
 								<div class='inner' >
 									<img alt='guitarla' src='img/portfolio/guitarla.jpg' >
 									<div class='caption' >
@@ -1260,7 +1259,7 @@
 									</div>
 								</div>
 							</div>
-							<div class='item' data-groups='["all","html","css","sass"]' >
+							<div class='item' data-groups='["all","htmlcss","sass"]' >
 								<div class='inner' >
 									<img alt='meeti' src='img/portfolio/meeti.jpg' >
 									<div class='caption' >
@@ -1278,7 +1277,7 @@
 									</div>
 								</div>
 							</div>
-							<div class='item' data-groups='["all","html","css","sass"]' >
+							<div class='item' data-groups='["all","htmlcss","sass"]' >
 								<div class='inner' >
 									<img alt='podcast' src='img/portfolio/podcast.jpg' >
 									<div class='caption' >
@@ -1332,7 +1331,7 @@
 									</div>
 								</div>
 							</div>
-							<div class='item' data-groups='["all","html","css","javascript"]' >
+							<div class='item' data-groups='["all","htmlcss","javascript"]' >
 								<div class='inner' >
 									<img alt='rentacar' src='img/portfolio/rentacar.jpg' >
 									<div class='caption' >
@@ -1350,7 +1349,7 @@
 									</div>
 								</div>
 							</div>
-							<div class='item' data-groups='["all","html","css","sass"]' >
+							<div class='item' data-groups='["all","htmlcss","sass"]' >
 								<div class='inner' >
 									<img alt='udeclone' src='img/portfolio/udeclone.jpg' >
 									<div class='caption' >
