--- a/Projects/udeclone.html
+++ b/Projects/udeclone.html
@@ -15,7 +15,7 @@
 		<link rel="icon" href="../img/favicon.ico" type="image/x-icon">
 	</head>
 	<body>
-		<a href='../index.html' class='close-btn' >
+		<a href='../portfolio.html' class='close-btn' >
 			<span></span>
 			<span></span>
 		</a>
