--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
 							<li><a href='#' data-section='about' >About Me</a></li>
 							<li><a href='#' data-section='resume' >Resume</a></li>
 							<li><a href='#' data-section='services' >Services</a></li>
-							<li><a href='#' data-section='portfolio' >Portfolio</a></li>
+							<li><a href='portfolio.html' >Portfolio</a></li>
 							<li><a href='#' data-section='contact' >Contact</a></li>
 						</ul>
 					</nav>
@@ -1061,327 +1061,6 @@
 									<div class='content' >
 										<h4>Support</h4>
 										<p>Some projects will have support and I will give it to you for the time stipulated in the proposal.</p>
-									</div>
-								</div>
-							</div>
-						</div>
-					</div>
-				</div>
-				<div class='footer bg-lightgray section-block' >
-					<div class='container' >
-						<div class='row' >
-							<div class='col-xs-6 text-left' >
-								<h4>David Adrián Ochoa &#169; &#174; </h4>
-							</div>
-							<div class='col-xs-6 text-center' >
-								<ul class='footer-social' >
-									<li>
-										<a href='https://www.linkedin.com/in/davidadrian8a/' target="_blank" ><i class='ion-social-linkedin' ></i></a>
-									</li>
-									<li>
-										<a href='https://github.com/DavidAdrian8ag' target="_blank" ><i class='ion-social-github' ></i></a>
-									</li>
-									<li>
-										<a href='https://cerosmasunos.com.mx/' target="_blank" ><i class='ion-android-globe' ></i></a>
-									</li>
-									<li>
-										<a href='mailto:krezipedtech@gmail.com'><i class='ion-email' ></i></a>
-									</li>
-								</ul>
-							</div>
-						</div>
-					</div>
-				</div>
-			</section>
-			<section id='portfolio' class='portfolio-section section services-block' ><!--=== Portafolio ===-->
-				<div class='portfolio-block section-block ' >
-					<div class='container' >
-						<div class='row' >
-							<div class='col-md-6 col-md-offset-3' >
-								<div class='section-header text-center' >
-									<h2 class='animate text-over-block' >Portfolio</h2>
-									<div class='divider-draft center' ></div>
-									<p>Here are some of my projects, so you can check them down.</p>
-								</div>
-							</div>
-						</div>
-						<div id='portfolio-filters'>
-							<ul>
-								<li><a href='#' data-group='all' class='active' >All</a></li>
-								<li><a href='#' data-group='htmlcss'><i class='ion-social-html5'></i>&<i class='ion-social-css3'></i></a></li>
-								<li><a href='#' data-group='sass'><i class='ion-social-sass'></i></a></li>
-								<li><a href='#' data-group='javascript'><i class='ion-social-javascript'></i></a></li>
-								<li><a href='#' data-group='python'><i class='ion-social-python'></i></a></li>
-							</ul>
-						</div>
-						<div id='portfolio-grid' class='portfolio-items' >
-							<div class='item' data-groups='["all","htmlcss","javascript"]' >
-								<div class='inner' >
-									<img alt='carrito' src='img/portfolio/carrito.jpg' >
-									<div class='caption' >
-										<div class='caption-inner' >
-											<h4>Shopping Cart</h4>
-											<ul class='links' >
-												<li>
-													<a href='Projects/carrito.html' ><i class='ion-ios-plus-empty' ></i></a>
-												</li>
-												<li>
-													<a href='img/portfolio/carrito.jpg' class='image-link' ><i class='ion-ios-search' ></i></a>
-												</li>
-											</ul>
-										</div>
-									</div>
-								</div>
-							</div>
-							<div class='item' data-groups='["all","python"]' >
-								<div class='inner' >
-									<img alt='carrito' src='img/portfolio/BMI.png' >
-									<div class='caption' >
-										<div class='caption-inner' >
-											<h4>BMI</h4>
-											<ul class='links' >
-												<li>
-													<a href='Projects/bmi.html' ><i class='ion-ios-plus-empty' ></i></a>
-												</li>
-												<li>
-													<a href='img/portfolio/BMI.png' class='image-link' ><i class='ion-ios-search' ></i></a>
-												</li>
-											</ul>
-										</div>
-									</div>
-								</div>
-							</div>
-							<div class='item' data-groups='["all","htmlcss"]' >
-								<div class='inner' >
-									<img alt='compushop' src='img/portfolio/compushop.jpg' >
-									<div class='caption' >
-										<div class='caption-inner' >
-											<h4>PC Store</h4>
-											<ul class='links' >
-												<li>
-													<a href='Projects/compushop.html' ><i class='ion-ios-plus-empty' ></i></a>
-												</li>
-												<li>
-													<a href='img/portfolio/compushop.jpg' class='image-link' ><i class='ion-ios-search' ></i></a>
-												</li>
-											</ul>
-										</div>
-									</div>
-								</div>
-							</div>
-							<div class='item' data-groups='["all","htmlcss","javascript"]' >
-								<div class='inner' >
-									<img alt='email' src='img/portfolio/email.jpg' >
-									<div class='caption' >
-										<div class='caption-inner' >
-											<h4>Email Simulation</h4>
-											<ul class='links' >
-												<li>
-													<a href='Projects/email.html' ><i class='ion-ios-plus-empty' ></i></a>
-												</li>
-												<li>
-													<a href='img/portfolio/email.jpg' class='image-link' ><i class='ion-ios-search' ></i></a>
-												</li>
-											</ul>
-										</div>
-									</div>
-								</div>
-							</div>
-							<div class='item' data-groups='["all","python"]' >
-								<div class='inner' >
-									<img alt='carrito' src='img/portfolio/Fizz Buzz.png' >
-									<div class='caption' >
-										<div class='caption-inner' >
-											<h4>Fizz Buzz</h4>
-											<ul class='links' >
-												<li>
-													<a href='Projects/fizzbuzz.html' ><i class='ion-ios-plus-empty' ></i></a>
-												</li>
-												<li>
-													<a href='img/portfolio/Fizz Buzz.png' class='image-link' ><i class='ion-ios-search' ></i></a>
-												</li>
-											</ul>
-										</div>
-									</div>
-								</div>
-							</div>
-							<div class='item' data-groups='["all","python"]' >
-								<div class='inner' >
-									<img alt='carrito' src='img/portfolio/Guess the Number.png' >
-									<div class='caption' >
-										<div class='caption-inner' >
-											<h4>Guess the Number</h4>
-											<ul class='links' >
-												<li>
-													<a href='Projects/gnumber.html' ><i class='ion-ios-plus-empty' ></i></a>
-												</li>
-												<li>
-													<a href='img/portfolio/Guess the Number.png' class='image-link' ><i class='ion-ios-search' ></i></a>
-												</li>
-											</ul>
-										</div>
-									</div>
-								</div>
-							</div>
-							<div class='item' data-groups='["all","htmlcss","sass"]' >
-								<div class='inner' >
-									<img alt='guitarla' src='img/portfolio/guitarla.jpg' >
-									<div class='caption' >
-										<div class='caption-inner' >
-											<h4>Guitar Store</h4>
-											<ul class='links' >
-												<li>
-													<a href='Projects/guitarla.html' ><i class='ion-ios-plus-empty' ></i></a>
-												</li>
-												<li>
-													<a href='img/portfolio/guitarla.jpg' class='image-link' ><i class='ion-ios-search' ></i></a>
-												</li>
-											</ul>
-										</div>
-									</div>
-								</div>
-							</div>
-							<div class='item' data-groups='["all","python"]' >
-								<div class='inner' >
-									<img alt='carrito' src='img/portfolio/PIN Bank.png' >
-									<div class='caption' >
-										<div class='caption-inner' >
-											<h4>PIN Bank</h4>
-											<ul class='links' >
-												<li>
-													<a href='Projects/pin.html' ><i class='ion-ios-plus-empty' ></i></a>
-												</li>
-												<li>
-													<a href='img/portfolio/PIN Bank.png' class='image-link' ><i class='ion-ios-search' ></i></a>
-												</li>
-											</ul>
-										</div>
-									</div>
-								</div>
-							</div>
-							<div class='item' data-groups='["all","htmlcss","sass"]' >
-								<div class='inner' >
-									<img alt='meeti' src='img/portfolio/meeti.jpg' >
-									<div class='caption' >
-										<div class='caption-inner' >
-											<h4>Meeti Clone</h4>
-											<ul class='links' >
-												<li>
-													<a href='Projects/meeti.html' ><i class='ion-ios-plus-empty' ></i></a>
-												</li>
-												<li>
-													<a href='img/portfolio/meeti.jpg' class='image-link' ><i class='ion-ios-search' ></i></a>
-												</li>
-											</ul>
-										</div>
-									</div>
-								</div>
-							</div>
-							<div class='item' data-groups='["all","htmlcss","sass"]' >
-								<div class='inner' >
-									<img alt='podcast' src='img/portfolio/podcast.jpg' >
-									<div class='caption' >
-										<div class='caption-inner' >
-											<h4>Podcast FM Clone</h4>
-											<ul class='links' >
-												<li>
-													<a href='Projects/podcast.html' ><i class='ion-ios-plus-empty' ></i></a>
-												</li>
-												<li>
-													<a href='img/portfolio/podcast.jpg' class='image-link' ><i class='ion-ios-search' ></i></a>
-												</li>
-											</ul>
-										</div>
-									</div>
-								</div>
-							</div>
-							<div class='item' data-groups='["all","python"]' >
-								<div class='inner' >
-									<img alt='carrito' src='img/portfolio/Quadratic equations.png' >
-									<div class='caption' >
-										<div class='caption-inner' >
-											<h4>Quadratic equations</h4>
-											<ul class='links' >
-												<li>
-													<a href='Projects/qeq.html' ><i class='ion-ios-plus-empty' ></i></a>
-												</li>
-												<li>
-													<a href='img/portfolio/Quadratic equations.png' class='image-link' ><i class='ion-ios-search' ></i></a>
-												</li>
-											</ul>
-										</div>
-									</div>
-								</div>
-							</div>
-							<div class='item' data-groups='["all","python"]' >
-								<div class='inner' >
-									<img alt='carrito' src='img/portfolio/Temperature Converter.png' >
-									<div class='caption' >
-										<div class='caption-inner' >
-											<h4>Temperature Converter</h4>
-											<ul class='links' >
-												<li>
-													<a href='Projects/tempconver.html' ><i class='ion-ios-plus-empty' ></i></a>
-												</li>
-												<li>
-													<a href='img/portfolio/Temperature Converter.png' class='image-link' ><i class='ion-ios-search' ></i></a>
-												</li>
-											</ul>
-										</div>
-									</div>
-								</div>
-							</div>
-							<div class='item' data-groups='["all","htmlcss","javascript"]' >
-								<div class='inner' >
-									<img alt='rentacar' src='img/portfolio/rentacar.jpg' >
-									<div class='caption' >
-										<div class='caption-inner' >
-											<h4>Rent a Car</h4>
-											<ul class='links' >
-												<li>
-													<a href='Projects/rentacar.html' ><i class='ion-ios-plus-empty' ></i></a>
-												</li>
-												<li>
-													<a href='img/portfolio/rentacar.jpg' class='image-link' ><i class='ion-ios-search' ></i></a>
-												</li>
-											</ul>
-										</div>
-									</div>
-								</div>
-							</div>
-							<div class='item' data-groups='["all","htmlcss","sass"]' >
-								<div class='inner' >
-									<img alt='udeclone' src='img/portfolio/udeclone.jpg' >
-									<div class='caption' >
-										<div class='caption-inner' >
-											<h4>Udemy Clone</h4>
-											<ul class='links' >
-												<li>
-													<a href='Projects/udeclone.html' ><i class='ion-ios-plus-empty' ></i></a>
-												</li>
-												<li>
-													<a href='img/portfolio/udeclone.jpg' class='image-link' ><i class='ion-ios-search' ></i></a>
-												</li>
-											</ul>
-										</div>
-									</div>
-								</div>
-							</div>
-							<div class='item' data-groups='["all","python"]' >
-								<div class='inner' >
-									<img alt='carrito' src='img/portfolio/Magic Ball 8.png' >
-									<div class='caption' >
-										<div class='caption-inner' >
-											<h4>Magic Ball 8</h4>
-											<ul class='links' >
-												<li>
-													<a href='Projects/mb8.html' ><i class='ion-ios-plus-empty' ></i></a>
-												</li>
-												<li>
-													<a href='img/portfolio/Magic Ball 8.png' class='image-link' ><i class='ion-ios-search' ></i></a>
-												</li>
-											</ul>
-										</div>
 									</div>
 								</div>
 							</div>
