link colors update

--- a/Projects/carrito.html
+++ b/Projects/carrito.html
@@ -30,21 +30,21 @@
 					<div class='row' >
 						<div class='col-md-8' >
 							<img src='../img/portfolio/carrito.jpg' alt='carrito' >
-							<h4 class="espacioworktitulo">Shopping Cart</h4>
+							<h4>Shopping Cart</h4>
 							<p>This was a project in which there is a simple base of an example of a site that offers online courses, but on this one, you can choose which course or courses you want to buy, the shopping cart is ready to grow as you choose “add to cart” and you can see the shopping cart getting bigger, you can delete courses or even clear all the cart.</p>
 						</div>
 						<div class='col-md-4' >
 							<ul class='work-info' >
 								<li>
-									<h4><i class="ionicons ion-ios-world"></i>See it working</h4>
-									<a href='https://shopping-cart-js-wproducts.netlify.app/' target="_blank" ><p>Shopping Cart</p></a>
+									<h4><i class="ionicons ion-ios-world"></i>See it working:</h4>
+									<a  href='https://shopping-cart-js-wproducts.netlify.app/' target="_blank" ><p class="seeitworking"><strong>Shopping Cart</strong> </p></a>
 								</li>
 								<li>
 									<h4><i class="bi bi-filetype-js"></i>Category</h4>
 									<p><i class='ion-social-html5'></i></i>  <i class='ion-social-css3'>  </i><i class='ion-social-javascript'></i> </p>
 								</li>
 								<li>
-									<h4>The Code</h4>
+									<h4>The Code:</h4>
 									<a href='https://github.com/DavidAdrian8ag/Projects/tree/main/Shopping-Car' target="_blank" >Here <i class='ion-social-github' ></i></a>
 								</li>
 							</ul>
