--- a/Projects/compushop.html
+++ b/Projects/compushop.html
@@ -36,15 +36,15 @@
 						<div class='col-md-4' >
 							<ul class='work-info' >
 								<li>
-									<h4><i class="ionicons ion-ios-world"></i>See it working</h4>
-									<a href='https://static-pc-shop-example.netlify.app/' target="_blank" ><p>PC Store</p></a>
+									<h4><i class="ionicons ion-ios-world"></i>See it working:</h4>
+									<a href='https://static-pc-shop-example.netlify.app/' target="_blank" ><p class="seeitworking"><strong>PC Store</strong></p></a>
 								</li>
 								<li>
 									<h4><i class="bi bi-filetype-js"></i>Category</h4>
 									<p></i><i class='ion-social-html5'></i>  <i class='ion-social-css3'></i> </p>
 								</li>
 								<li>
-									<h4>The Code</h4>
+									<h4>The Code:</h4>
 									<a href='https://github.com/DavidAdrian8ag/Projects/tree/main/Computer%20Store' target="_blank" >Here <i class='ion-social-github' ></i></a>
 								</li>
 							</ul>
