--- a/portfolio.html
+++ b/portfolio.html
@@ -40,7 +40,7 @@
 						</div>
 						<div id='portfolio-filters'>
 							<ul>
-								<li><a href='#' data-group='all' class='active' >All</a></li>
+								<li><a href='#' data-group='all' class='active test12' >All</a></li>
 								<li><a href='#' data-group='htmlcss'><i class='ion-social-html5'></i>&<i class='ion-social-css3'></i></a></li>
 								<li><a href='#' data-group='sass'><i class='ion-social-sass'></i></a></li>
 								<li><a href='#' data-group='javascript'><i class='ion-social-javascript'></i></a></li>
