--- a/Projects/udeclone.html
+++ b/Projects/udeclone.html
@@ -36,15 +36,15 @@
 						<div class='col-md-4' >
 							<ul class='work-info' >
 								<li>
-									<h4><i class="ionicons ion-ios-world"></i>See it working</h4>
-									<a href='https://clone-udemy-spa.netlify.app/' target="_blank" ><p>Udemy Clone</p></a>
+									<h4><i class="ionicons ion-ios-world"></i>See it working:</h4>
+									<a href='https://clone-udemy-spa.netlify.app/' target="_blank" ><p class="seeitworking"><strong>Udemy Clone</strong> </p></a>
 								</li>
 								<li>
 									<h4><i class="bi bi-filetype-js"></i>Category</h4>
 									<p><i class='ion-social-html5'></i>  <i class='ion-social-css3'></i>  <i class='ion-social-sass'></i>
 								</li>
 								<li>
-									<h4>The Code</h4>
+									<h4>The Code:</h4>
 									<a href='https://github.com/DavidAdrian8ag/Projects/tree/main/Udemy-Clone' target="_blank" >Here <i class='ion-social-github' ></i></a>
 								</li>
 							</ul>
