--- a/index.html
+++ b/index.html
@@ -582,7 +582,7 @@
 									</div>
 								</div>
 								<div class='skill' >
-									<h4>Otptimization</h4>
+									<h4>Optimization</h4>
 									<div class='skill-bar' data-percent='90' >
 										<div class='bar' >
 											<div class='percent' ></div>
