--- a/Projects/guitarla.html
+++ b/Projects/guitarla.html
@@ -37,7 +37,7 @@
 							<ul class='work-info' >
 								<li>
 									<h4><i class="ionicons ion-ios-world"></i>See it working:</h4>
-									<a href='https://gitar-store-example.netlify.app/' target="_blank" ><p class="seeitworking"><strong>Gitar Store</strong> </p></a>
+									<a href='https://gitar-store-example.netlify.app/' target="_blank" ><p class="seeitworking"><strong>Guitar Store</strong> </p></a>
 								</li>
 								<li>
 									<h4><i class="bi bi-filetype-js"></i>Category</h4>
