Vs Code theme Added to portfolio

--- a/Projects/udeclone.html
+++ b/Projects/udeclone.html
@@ -41,7 +41,7 @@
 								</li>
 								<li>
 									<h4><i class="bi bi-filetype-js"></i>Category</h4>
-									<p><i class='ion-social-html5'></i>  <i class='ion-social-css3'></i>  <i class='ion-social-sass'></i>
+									<p><i class='ion-social-html5'></i>  <i class='ion-social-css3'></i>  <i class='ion-social-sass'></i></p>
 								</li>
 								<li>
 									<h4>The Code:</h4>
