--- a/portfolio.html
+++ b/portfolio.html
@@ -45,6 +45,7 @@
 								<li><a href='#' data-group='sass'><i class='ion-social-sass'></i></a></li>
 								<li><a href='#' data-group='javascript'><i class='ion-social-javascript'></i></a></li>
 								<li><a href='#' data-group='python'><i class='ion-social-python'></i></a></li>
+								<li><a href='#' data-group='other'><i class='ion-laptop'></i></a></li>
 							</ul>
 						</div>
 						<div id='portfolio-grid' class='portfolio-items' >
@@ -309,6 +310,24 @@
 											<ul class='links' >
 												<li>
 													<a href='Projects/mb8.html' ><i class='ion-ios-plus-empty' ></i></a>
+												</li>
+												<li>
+													<a href='img/portfolio/Magic Ball 8.png' class='image-link' ><i class='ion-ios-search' ></i></a>
+												</li>
+											</ul>
+										</div>
+									</div>
+								</div>
+							</div>
+							<div class='item' data-groups='["all","other"]' >
+								<div class='inner' >
+									<img alt='carrito' src='img/portfolio/vscode.png' >
+									<div class='caption' >
+										<div class='caption-inner' >
+											<h4>Vs Code Theme</h4>
+											<ul class='links' >
+												<li>
+													<a href='Projects/vscodetheme.html' ><i class='ion-ios-plus-empty' ></i></a>
 												</li>
 												<li>
 													<a href='img/portfolio/Magic Ball 8.png' class='image-link' ><i class='ion-ios-search' ></i></a>
