--- a/Projects/vscodetheme.html
+++ b/Projects/vscodetheme.html
@@ -4,7 +4,7 @@
 		<meta charset="utf-8">
 		<meta http-equiv="X-UA-Compatible" content="IE=edge">
 		<meta name="viewport" content="width=device-width, initial-scale=1">
-		<title>XXXXXXXXXXXXXXXXXXXXXXXXXX</title>
+		<title>Vs Code Theme</title>
 		<link rel='stylesheet' type='text/css' href='../bootstrap/css/bootstrap.min.css' >
 		<link rel='stylesheet' type='text/css' href='../css/ionicons.min.css' >
 		<link rel='stylesheet' type='text/css' href='../css/owl.carousel.css' >
@@ -29,23 +29,24 @@
 				<div class='container' >
 					<div class='row' >
 						<div class='col-md-8' >
-							<img src='../img/portfolio/udeclone.jpg' alt='udeclone' >
-							<h4 class="espacioworktitulo">XXXXXXXXXXXXXXXXXXXXXXXXXX</h4>
-							<p>XXXXXXXXXXXXXXXXXXXXXXXXXX</p>
+							<img src='../img/portfolio/vscode.png' alt='vscodetheme' >
+							<h4 class="espacioworktitulo">Vs Code Theme</h4>
+							<p>A great cold night Neon Theme over a deep blue background with a very good contrast in order to be able to see all around you and will help you tu identify easier your code.</p>
+							<p>And a fine light silver/wood Theme for a light theme.</p>
 						</div>
 						<div class='col-md-4' >
 							<ul class='work-info' >
 								<li>
-									<h4><i class="ionicons ion-ios-world"></i>See it working:</h4>
-									<a href='XXXXXXXXXXXXXXXXXXXXXXXXXX' target="_blank" ><p class="seeitworking"><strong>XXXXXXXXXXXXXXXXXXXXXXXXXX</strong> </p></a>
+									<h4><i class="ionicons ion-ios-world"></i>Try it:</h4>
+									<a href='https://marketplace.visualstudio.com/items?itemName=krezitech.neon-programming-theme' target="_blank" ><p class="seeitworking"><strong>Vs Code Theme</strong> </p></a>
 								</li>
 								<li>
 									<h4><i class="bi bi-filetype-js"></i>Category</h4>
-									<p><i class='ion-social-html5'></i>  <i class='ion-social-css3'></i>  <i class='ion-social-javascript'></i>  <i class='ion-social-sass'></i>  <i class='ion-social-python'></i>  <i class='ion-social-markdown'></i></p>
+									<p><i class='ion-laptop'></i></p>
 								</li>
 								<li>
 									<h4>The Code:</h4>
-									<a href='XXXXXXXXXXXXXXXXXXXXXXXXXX' target="_blank" >Here <i class='ion-social-github' ></i></a>
+									<a href='https://github.com/DavidAdrian8ag/Neon-Theme#neon-theme' target="_blank" >Here <i class='ion-social-github' ></i></a>
 								</li>
 							</ul>
 						</div>
