--- a/index.html
+++ b/index.html
@@ -264,17 +264,7 @@
 					<div class='container' >
 						<ul class='timeline' >
 							<li class='timeline-header' >
-								<h2>Education</h2>
-							</li>
-							<li>
-								<div class='timeline-desc' >
-									<h4>2000 - 2001</h4>
-								</div>
-								<div class='timeline-content' >
-									<h4>A year studying and living in Scotland</h4>
-									<span><a href="https://www.st-thomas-of-aquins.org.uk/" target="_blank">@St Thomas of Aquin's High School</a></span>
-									<p class="text-left">I had the opportunity to go and live in Edinburgh, Scotland. I attended school as any other person and had to be one more, having the same responsibilities and delivering as any other student.</p>
-								</div>
+								<h2>Hightlights</h2>
 							</li>
 							<li class='inverse'>
 								<div class='timeline-desc' >
@@ -283,7 +273,6 @@
 								<div class='timeline-content' >
 									<h4>TOEFL Test IBT / PBT -  583</h4>
 									<span><a href="https://toefltest.mx/" target="_blank">@TOEFL IBT / PBT</a></span>
-									<p>I took the TOEFL English test and got a score of 583.</p>
 								</div>
 							</li>
 							<li>
@@ -293,47 +282,24 @@
 								<div class='timeline-content' >
 									<h4>University - Mechatronics Engineer</h4>
 									<span><a href="https://www.upiita.ipn.mx/" target="_blank">@Instituto Politécnico Nacional - UPIITA</a></span>
-									<p class="text-left">I studied at IPN where I got my bachelor’s degree with my final project “Diseño y construcción de un robot basado en la locomoción de la larva de la Cochliomyia hominivorax", which was a robot based of a worm’s locomotion</p>
 								</div>
 							</li>
 							<li class='inverse'>
-								<div class='timeline-desc' >
-									<h4>2009 - 2010</h4>
-								</div>
-								<div class='timeline-content' >
-									<h4>Master’s degree on clean energy and technologies</h4>
-									<span><a href="https://www.cicese.edu.mx/" target="_blank">@Cicese</a></span>
-									<p>I applied and got accepted in a master’s degree program about clean energy and technologies, however, after when I was still there, the center closed that master, so I had to left pending that program</p>
-								</div>
-							</li>
-							<li>
 								<div class='timeline-desc' >
 									<h4>2011</h4>
 								</div>
 								<div class='timeline-content' >
 									<h4>TOEIC Test - 920 </h4>
 									<span><a href="http://www.toeic.mx/" target="_blank">@TOEIC </a></span>
-									<p class="text-left">I did another English test to see my level at the time and got a 920 score.</p>
 								</div>
 							</li>
-							<li class='inverse' >
+							<li  >
 								<div class='timeline-desc' >
 									<h4>2015 - 2016</h4>
 								</div>
 								<div class='timeline-content' >
 									<h4>Six Sigma Certification</h4>
 									<span><a href="https://internationalleansixsigma.org/" target="_blank">@Yellow Six Sigma</a></span>
-									<p>I got into a program to get the Yellow Belt Six-Sigma certification, where I improved my knowledge about processes and quality, my project of which I got my certification was to achieve a half a million pesos saving in electrical bill for the Ericssons facilities in Mexico City which represented about 30% of the expense. Which was more than the forecast which was only 13%.</p>
-								</div>
-							</li>
-							<li>
-								<div class='timeline-desc' >
-									<h4>2018 - Present </h4>
-								</div>
-								<div class='timeline-content' >
-									<h4>Learning and Studying how to Program</h4>
-									<span><a href="#" target="_blank">@Self-Taught </a></span>
-									<p class="text-left">Still learning from several platforms like online courses, YouTube channels, Udemy, X (twitter) and more.</p>
 								</div>
 							</li>
 							<li class='timeline-header' >
