--- a/Projects/vscodetheme.html
+++ b/Projects/vscodetheme.html
@@ -38,7 +38,7 @@
 							<ul class='work-info' >
 								<li>
 									<h4><i class="ionicons ion-ios-world"></i>Try it:</h4>
-									<a href='https://marketplace.visualstudio.com/items?itemName=krezitech.neon-programming-theme' target="_blank" ><p class="seeitworking"><strong>Vs Code Theme</strong> </p></a>
+									<a href='https://marketplace.visualstudio.com/items?itemName=krezitech.neon-programming-theme' target="_blank" ><p class="seeitworking"><strong>Neon Programming theme</strong> </p></a>
 								</li>
 								<li>
 									<h4><i class="bi bi-filetype-js"></i>Category</h4>
