Reajuste CV para ver y para descarga

--- a/index.html
+++ b/index.html
@@ -92,7 +92,8 @@
 									<a class='symp-btn' href='https://github.com/DavidAdrian8ag' target="_blank" ><i class='ion-social-github' ></i></a>
 									<a class='symp-btn' href='https://cerosmasunos.com.mx/' target="_blank" ><i class='ion-android-globe' ></i></a>
 									<a class='symp-btn' href='mailto:krezipedtech@gmail.com'><i class='ion-email' ></i></a>
-									<a href='img/David_Ochoa_CV.pdf' download="img/David_Ochoa_CV.pdf.pdf" target='_blank' class='symp-btn link-btn' ><i class='ion-ios-download' ></i>Download Resume</a>
+									<a class='symp-btn' href='resume/David_Ochoa_CV.pdf' target="_blank" ><i class='ion-paperclip' ></i></a>
+									<a href='resume/David_Ochoa_CV.pdf' download="resume/David_Ochoa_CV.pdf" target='_blank' class='symp-btn link-btn' ><i class='ion-ios-download' ></i>Download my Resume</a>
 								</p>
 							</div>
 						</div>
@@ -2350,7 +2351,7 @@
 					<div class='services-block section-block' >
 						<div class='container' >
 							<div class='row' >
-								<div class='col-md-3' >
+								<div class='col-md-2'>
 									<a href='https://www.linkedin.com/in/davidadrian8a/' target="_blank" >
 										<div class='service' >
 											<div class='icon' >
@@ -2362,7 +2363,7 @@
 										</div>
 									</a>
 								</div>
-								<div class='col-md-2' >
+								<div class='col-md-2'>
 									<a href='https://github.com/DavidAdrian8ag' target="_blank" >
 										<div class='service' >
 											<div class='icon' >
@@ -2374,7 +2375,7 @@
 										</div>
 									</a>
 								</div>
-								<div class='col-md-2' >
+								<div class='col-md-2'>
 									<a href='https://cerosmasunos.com.mx/' target="_blank" >
 										<div class='service ' >
 											<div class='icon' >
@@ -2386,7 +2387,7 @@
 										</div>
 									</a>
 								</div>
-								<div class='col-md-2' >
+								<div class='col-md-2'>
 									<a href='mailto:krezipedtech@gmail.com'>
 										<div class='service' >
 											<div class='icon' >
@@ -2398,14 +2399,26 @@
 										</div>
 									</a>
 								</div>
-								<div class='col-md-3 contacto' >
-									<a href='img/David_Ochoa_CV.pdf' download="img/David_Ochoa_CV.pdf" target='_blank'>
+								<div class='col-md-2'>
+									<a href='resume/David_Ochoa_CV.pdf' target='_blank'>
 										<div class='service' >
 											<div class='icon' >
 												<i class='ion-paperclip' ></i>
 											</div>
 											<div class='content' >
-												<h4 class="contacto">My CV</h4>
+												<h4 class="contacto">Check My CV</h4>
+											</div>
+										</div>
+									</a>
+								</div>
+								<div class='col-md-2'>
+									<a href='resume/David_Ochoa_CV.pdf' download="resume/David_Ochoa_CV.pdf" target='_blank'>
+										<div class='service' >
+											<div class='icon' >
+												<i class='ion-paperclip' ></i>
+											</div>
+											<div class='content' >
+												<h4 class="contacto">Download My CV</h4>
 											</div>
 										</div>
 									</a>
@@ -2456,5 +2469,4 @@
 		<script src='js/smoothscroll.js' ></script>
 		<script src='js/script.js' ></script>
 	</body>
->>>>>>> 9b787db0359bcc76992a894d587aca14e58bad35
 </html>
