--- a/index.html
+++ b/index.html
@@ -52,7 +52,7 @@
 				<div class='basic-info section-block' >
 					<div class='container' >
 						<div class='section-header text-center' >
-							<h2>What you need to know about me...</h2>
+							<h2 class="titulo">What you need <br>to Know about Me...</h2>
 							<div class='divider-draft center' ></div>
 						</div>
 						<div class='row' >
@@ -258,7 +258,7 @@
 					<div class='row ' >
 						<div class='col-md-6 col-md-offset-3' >
 							<div class='section-header text-center ' >
-								<h2 class='animate text-over-block ' >Know my trayectory</h2>
+								<h2 class='animate text-over-block titulo' >Know my Trayectory</h2>
 								<div class='divider-draft center' ></div>
 							</div>
 						</div>
@@ -268,7 +268,7 @@
 					<div class='container' >
 						<ul class='timeline' >
 							<li class='timeline-header' >
-								<h2>Hightlights</h2>
+								<h2 class="titulo2">Hightlights</h2>
 							</li>
 							<li class='inverse'>
 								<div class='timeline-desc' >
@@ -398,7 +398,7 @@
 								</div>
 							</li>
 							<li class='timeline-header' >
-								<h2>Experience </h2>
+								<h2 class="titulo2">Experience </h2>
 							</li>
 							<li class='inverse'>
 								<div class='timeline-desc' >
@@ -875,7 +875,7 @@
 					<div class='row ' >
 						<div class='col-md-6 col-md-offset-3' >
 							<div class='section-header main-title text-center ' >
-								<h2 class='animate text-over-block' >What <strong>I can</strong> do for <strong>You</strong></h2>
+								<h2 class='animate text-over-block titulo' >What <strong>I can</strong> do for <strong>You</strong></h2>
 								<div class='divider-draft center ' ></div>
 								<p>I really enjoy doing my job therefore I give the best of me whenever I am working on anything. I like to deliver good high-quality results and I love a good challenge if I have to do anything that I don’t already know.</p>
 							</div>
@@ -1149,8 +1149,8 @@
 					<div class='row' >
 						<div class='col-md-12'>
 							<div class='section-header main-title text-center' >
-								<h1 class='animate text-over-block' >If you want to hire me</h1>
-								<h2 class='animate text-over-block' >Find me here!</h2>
+								<h1 class='animate text-over-block titulo' >If you want to hire me</h1>
+								<h2 class='animate text-over-block titulo' >Find me here!</h2>
 								<div class='divider-draft center' ></div>
 							</div>
 						</div>
