--- a/portfolio.html
+++ b/portfolio.html
@@ -32,7 +32,7 @@
 						<div class='row' >
 							<div class='col-md-6 col-md-offset-3' >
 								<div class='section-header text-center' >
-									<h2 class='animate text-over-block' >Portfolio</h2>
+									<h2 class='animate text-over-block titulo' >Portfolio</h2>
 									<div class='divider-draft center' ></div>
 									<p>Here are some of my projects, so you can check them down.</p>
 								</div>
