adding local storage

--- a/Projects/carrito.html
+++ b/Projects/carrito.html
@@ -31,7 +31,7 @@
 						<div class='col-md-8' >
 							<img src='../img/portfolio/carrito.jpg' alt='carrito' >
 							<h4>Shopping Cart</h4>
-							<p>This was a project in which there is a simple base of an example of a site that offers online courses, but on this one, you can choose which course or courses you want to buy, the shopping cart is ready to grow as you choose “add to cart” and you can see the shopping cart getting bigger, you can delete courses or even clear all the cart.</p>
+							<p>This was a project in which there is a simple base of an example of a site that offers online courses, but on this one, you can choose which course or courses you want to buy, the shopping cart is ready to grow as you choose “add to cart” and you can see the shopping cart getting bigger, you can delete courses or even clear all the cart. Please note that the cart does not empty if you refresh the browser, it remains so you can continue shopping in case of any issue with your browser.</p>
 						</div>
 						<div class='col-md-4' >
 							<ul class='work-info' >
