--- a/Projects/vscodetheme.html
+++ b/Projects/vscodetheme.html
@@ -12,7 +12,7 @@
 		<link rel='stylesheet' type='text/css' href='../css/owl.transitions.css' >
 		<link rel='stylesheet' type='text/css' href='../css/style.css' >
 		<link rel='stylesheet' type='text/css' href='../css/color-default.css' >
-		<link rel="icon" href="../img/favicon.ico" type="image/x-icon">
+		<link rel="icon" href="../img/favicon.png" type="image/x-icon">
 	</head>
 	<body>
 		<a href='../portfolio.html' class='close-btn' >
