--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
 		<link rel='stylesheet' type='text/css' href='css/magnific-popup.css' >
 		<link rel='stylesheet' type='text/css' href='css/style.css' >
 		<link rel='stylesheet' type='text/css' href='css/color-blue.css' >
-		<link rel="icon" href="img/favicon.ico" type="image/x-icon">
+		<link rel="icon" href="img/favicon.png" type="image/x-icon">
 	</head>
 	<body>
 		<div id='preloader' >
