--- a/index.html
+++ b/index.html
@@ -38,6 +38,7 @@
 							<li><a href='#' data-section='resume' >Resume</a></li>
 							<li><a href='#' data-section='services' >Services</a></li>
 							<li><a href='portfolio.html' >Portfolio</a></li>
+							<li><a href='cert.html' >Certifications</a></li>
 							<li><a href='#' data-section='contact' >Contact</a></li>
 						</ul>
 					</nav>
