Copyrights updated logos

--- a/portfolio.html
+++ b/portfolio.html
@@ -380,7 +380,7 @@
 					<div class='container' >
 						<div class='row' >
 							<div class='col-xs-6 text-left' >
-								<h4>David Adrián Ochoa &#169; &#174; </h4>
+								<h4>David Adrián Ochoa &#174&#169</h4>
 							</div>
 							<div class='col-xs-6 text-center' >
 								<ul class='footer-social' >
