--- a/index.html
+++ b/index.html
@@ -232,7 +232,7 @@
 					<div class='container' >
 						<div class='row' >
 							<div class='col-xs-6 text-left' >
-								<h4>David Adrián Ochoa &#169; &#174; </h4>
+								<h4>David Adrián Ochoa &#174&#169 </h4>
 							</div>
 							<div class='col-xs-6 text-center' >
 								<ul class='footer-social' >
@@ -849,7 +849,7 @@
 					<div class='container' >
 						<div class='row' >
 							<div class='col-xs-6 text-left' >
-								<h4>David Adrián Ochoa &#169; &#174; </h4>
+								<h4>David Adrián Ochoa &#174&#169</h4>
 							</div>
 							<div class='col-xs-6 text-center' >
 								<ul class='footer-social' >
@@ -1123,7 +1123,7 @@
 					<div class='container' >
 						<div class='row' >
 							<div class='col-xs-6 text-left' >
-								<h4>David Adrián Ochoa &#169; &#174; </h4>
+								<h4>David Adrián Ochoa &#174&#169</h4>
 							</div>
 							<div class='col-xs-6 text-center' >
 								<ul class='footer-social' >
@@ -1246,7 +1246,7 @@
 					<div class='container' >
 						<div class='row' >
 							<div class='col-xs-6 text-left' >
-								<h4>David Adrián Ochoa &#169; &#174; </h4>
+								<h4>David Adrián Ochoa &#174&#169 </h4>
 							</div>
 							<div class='col-xs-6 text-center' >
 								<ul class='footer-social' >
