--- a/cert.html
+++ b/cert.html
@@ -277,7 +277,7 @@
 							</div>
 							<div class='item' data-groups='["all","microsoft"]' >
 								<div class='inner' >
-									<img alt='IntroGit' src='img/cert/UsodeGitHubCopilotconPython.png' >
+									<img alt='IntroGitPy' src='img/cert/UsodeGitHubCopilotconPython.png' >
 									<div class='caption' >
 										<div class='caption-inner' >
 											<h4>Uso de GitHub Copilot con Python</h4>
@@ -292,7 +292,7 @@
 							</div>
 							<div class='item' data-groups='["all","microsoft"]' >
 								<div class='inner' >
-									<img alt='IntroGit' src='img/cert/UsodeGitHubCopilotconJavaScript.png' >
+									<img alt='IntroGitJs' src='img/cert/UsodeGitHubCopilotconJavaScript.png' >
 									<div class='caption' >
 										<div class='caption-inner' >
 											<h4>Uso de GitHub Copilot con JavaScript</h4>
@@ -307,7 +307,7 @@
 							</div>
 							<div class='item' data-groups='["all","microsoft"]' >
 								<div class='inner' >
-									<img alt='IntroGit' src='img/cert/Proyectodedesafio.png' >
+									<img alt='proyecfuncionalidades' src='img/cert/Proyectodedesafio.png' >
 									<div class='caption' >
 										<div class='caption-inner' >
 											<h4>Proyecto Desafio agregar funcionalidades</h4>
@@ -322,7 +322,7 @@
 							</div>
 							<div class='item' data-groups='["all","microsoft"]' >
 								<div class='inner' >
-									<img alt='IntroGit' src='img/cert/Proyectodedesafio2.png' >
+									<img alt='proyecconsola' src='img/cert/Proyectodedesafio2.png' >
 									<div class='caption' >
 										<div class='caption-inner' >
 											<h4>Proyecto Desafio crear una consola</h4>
@@ -338,7 +338,7 @@
 
 							<div class='item' data-groups='["all","codfas"]' >
 								<div class='inner' >
-									<img alt='IntroGitHub' src='img/cert/CursoProfesionalDesarrolloWeb.png' >
+									<img alt='Desarrolloweb' src='img/cert/CursoProfesionalDesarrolloWeb.png' >
 									<div class='caption' >
 										<div class='caption-inner' >
 											<h4>Curso Profesional de Desarrollo Web</h4>
@@ -354,7 +354,7 @@
 
 							<div class='item' data-groups='["all","codfas"]' >
 								<div class='inner' >
-									<img alt='IntroGitHub' src='img/cert/CursodeHerramientasyconceptosFrontend.png' >
+									<img alt='Herryconceptos' src='img/cert/CursodeHerramientasyconceptosFrontend.png' >
 									<div class='caption' >
 										<div class='caption-inner' >
 											<h4>Curso de Herramientas y Conceptos Frontend</h4>
