--- a/portfolio.html
+++ b/portfolio.html
@@ -70,7 +70,7 @@
 							</div>
 							<div class='item' data-groups='["all","python"]' >
 								<div class='inner' >
-									<img alt='carrito' src='img/portfolio/BMI.png' >
+									<img alt='BMI' src='img/portfolio/BMI.png' >
 									<div class='caption' >
 										<div class='caption-inner' >
 											<h4>BMI</h4>
@@ -124,7 +124,7 @@
 							</div>
 							<div class='item' data-groups='["all","python"]' >
 								<div class='inner' >
-									<img alt='carrito' src='img/portfolio/Fizz Buzz.png' >
+									<img alt='FizBuzz' src='img/portfolio/Fizz Buzz.png' >
 									<div class='caption' >
 										<div class='caption-inner' >
 											<h4>Fizz Buzz</h4>
@@ -142,7 +142,7 @@
 							</div>
 							<div class='item' data-groups='["all","python"]' >
 								<div class='inner' >
-									<img alt='carrito' src='img/portfolio/Guess the Number.png' >
+									<img alt='Gnumber' src='img/portfolio/Guess the Number.png' >
 									<div class='caption' >
 										<div class='caption-inner' >
 											<h4>Guess the Number</h4>
@@ -178,7 +178,7 @@
 							</div>
 							<div class='item' data-groups='["all","python"]' >
 								<div class='inner' >
-									<img alt='carrito' src='img/portfolio/PIN Bank.png' >
+									<img alt='PIN' src='img/portfolio/PIN Bank.png' >
 									<div class='caption' >
 										<div class='caption-inner' >
 											<h4>PIN Bank</h4>
@@ -232,7 +232,7 @@
 							</div>
 							<div class='item' data-groups='["all","python"]' >
 								<div class='inner' >
-									<img alt='carrito' src='img/portfolio/Quadratic equations.png' >
+									<img alt='QeQ' src='img/portfolio/Quadratic equations.png' >
 									<div class='caption' >
 										<div class='caption-inner' >
 											<h4>Quadratic equations</h4>
@@ -250,7 +250,7 @@
 							</div>
 							<div class='item' data-groups='["all","python"]' >
 								<div class='inner' >
-									<img alt='carrito' src='img/portfolio/Temperature Converter.png' >
+									<img alt='TempConv' src='img/portfolio/Temperature Converter.png' >
 									<div class='caption' >
 										<div class='caption-inner' >
 											<h4>Temperature Converter</h4>
@@ -304,7 +304,7 @@
 							</div>
 							<div class='item' data-groups='["all","python"]' >
 								<div class='inner' >
-									<img alt='carrito' src='img/portfolio/Magic Ball 8.png' >
+									<img alt='MB8' src='img/portfolio/Magic Ball 8.png' >
 									<div class='caption' >
 										<div class='caption-inner' >
 											<h4>Magic Ball 8</h4>
@@ -322,7 +322,7 @@
 							</div>
 							<div class='item' data-groups='["all","other"]' >
 								<div class='inner' >
-									<img alt='carrito' src='img/portfolio/vscode.png' >
+									<img alt='vscodetheme' src='img/portfolio/vscode.png' >
 									<div class='caption' >
 										<div class='caption-inner' >
 											<h4>Vs Code Theme</h4>
@@ -340,7 +340,7 @@
 							</div>
 							<div class='item' data-groups='["all","htmlcss","javascript"]' >
 								<div class='inner' >
-									<img alt='rentacar' src='img/portfolio/todolist.png' >
+									<img alt='todolist' src='img/portfolio/todolist.png' >
 									<div class='caption' >
 										<div class='caption-inner' >
 											<h4>Local Storage: My To Do List</h4>
@@ -358,7 +358,7 @@
 							</div>
 							<div class='item' data-groups='["all","htmlcss","javascript"]' >
 								<div class='inner' >
-									<img alt='rentacar' src='img/portfolio/calculadora.png' >
+									<img alt='calculadora' src='img/portfolio/calculadora.png' >
 									<div class='caption' >
 										<div class='caption-inner' >
 											<h4>Calculator</h4>
@@ -376,7 +376,7 @@
 							</div>
 							<div class='item' data-groups='["all","htmlcss"]' >
 								<div class='inner' >
-									<img alt='rentacar' src='img/portfolio/pizza.jpg' >
+									<img alt='pizza' src='img/portfolio/pizza.jpg' >
 									<div class='caption' >
 										<div class='caption-inner' >
 											<h4>Las Mejores Pizzas</h4>
