--- a/work-base.html
+++ b/work-base.html
@@ -22,7 +22,7 @@
 		</a>
 		<div id='preloader' >
 			<div class='loader' >
-				<img src='img/load.gif' alt='symp' >
+				<img src='img/load.gif' alt='loader' >
 			</div>
 		</div>
 		<div id='wrapper' >
@@ -30,7 +30,7 @@
 				<div class='container' >
 					<div class='row' >
 						<div class='col-md-8' >
-							<img src='../img/portfolio/udeclone.jpg' alt='udeclone' >
+							<img src='../img/portfolio/udeclone.jpg' alt='XXXXX' >
 							<h4 class="espacioworktitulo">XXXXXXXXXXXXXXXXXXXXXXXXXX</h4>
 							<p>XXXXXXXXXXXXXXXXXXXXXXXXXX</p>
 						</div>
