--- a/Projects/calculator.html
+++ b/Projects/calculator.html
@@ -22,7 +22,7 @@
 		</a>
 		<div id='preloader' >
 			<div class='loader' >
-				<img src='img/load.gif' alt='symp' >
+				<img src='img/load.gif' alt='loader' >
 			</div>
 		</div>
 		<div id='wrapper' >
@@ -30,7 +30,7 @@
 				<div class='container' >
 					<div class='row' >
 						<div class='col-md-8' >
-							<img src='../img/portfolio/calculadora.png' alt='udeclone' >
+							<img src='../img/portfolio/calculadora.png' alt='calculator' >
 							<h4 class="espacioworktitulo">Calculator</h4>
 							<p>This is a simple calculator done in HTML, CSS and JavaScript</p>
 						</div>
