--- a/Projects/email.html
+++ b/Projects/email.html
@@ -22,7 +22,7 @@
 		</a>
 		<div id='preloader' >
 			<div class='loader' >
-				<img src='img/load.gif' alt='symp' >
+				<img src='img/load.gif' alt='loader' >
 			</div>
 		</div>
 		<div id='wrapper' >
