--- a/Projects/qeq.html
+++ b/Projects/qeq.html
@@ -4,7 +4,7 @@
 		<meta charset="utf-8">
 		<meta http-equiv="X-UA-Compatible" content="IE=edge">
 		<meta name="viewport" content="width=device-width, initial-scale=1">
-		<title>Quadratic equations</title>
+		<title>Quadratic Equations</title>
 		<link rel='stylesheet' type='text/css' href='../bootstrap/css/bootstrap.min.css' >
 		<link rel='stylesheet' type='text/css' href='../css/ionicons.min.css' >
 		<link rel='stylesheet' type='text/css' href='../css/owl.carousel.css' >
