--- a/Projects/todolist.html
+++ b/Projects/todolist.html
@@ -4,7 +4,7 @@
 		<meta charset="utf-8">
 		<meta http-equiv="X-UA-Compatible" content="IE=edge">
 		<meta name="viewport" content="width=device-width, initial-scale=1">
-		<title>Local Storage: My To Do List</title>
+		<title>My To Do List</title>
 		<link rel='stylesheet' type='text/css' href='../bootstrap/css/bootstrap.min.css' >
 		<link rel='stylesheet' type='text/css' href='../css/ionicons.min.css' >
 		<link rel='stylesheet' type='text/css' href='../css/owl.carousel.css' >
@@ -22,7 +22,7 @@
 		</a>
 		<div id='preloader' >
 			<div class='loader' >
-				<img src='img/load.gif' alt='symp' >
+				<img src='img/load.gif' alt='loader' >
 			</div>
 		</div>
 		<div id='wrapper' >
