--- a/index.html
+++ b/index.html
@@ -458,7 +458,7 @@
 									<h4>Data Analyst</h4>
 									<span><a href="#" target="_blank">@Voxzi</a></span>
 									<p>I worked as a Data Analyst for SMS platform, I was responsible for the delivery and quality of the SMS messages.</p>
-                                             <p>Constant communication with the internal customer, to know if the messages were delivered as they should, and if there were any issues, I had to check the root-cause finding patterns that the issues showed and then fix them. I created a program which help to do a sweep and by that, inconsistent information was visible and could help to find the cause of the issues, improving the fixing time spent, this improvement was around 13% - 37%.</p>
+                                    <p>Constant communication with the internal customer, to know if the messages were delivered as they should, and if there were any issues, I had to check the root-cause finding patterns that the issues showed and then fix them. I created a program which help to do a sweep and by that, inconsistent information was visible and could help to find the cause of the issues, improving the fixing time spent, this improvement was around 13% - 37%.</p>
 								</div>
 							</li>
 
@@ -485,24 +485,34 @@
 						<div class='row' >
 							<div class='col-md-6' >
 								<div class='skill' >
-									<h4>English</h4>
+									<h4>Spanish</h4>
+									<div class='skill-bar' data-percent='99' >
+										<div class='bar' >
+											<div class='percent' ></div>
+										</div>
+									</div>
+								</div>
+							</div>
+                            <div class='col-md-6' >
+                                <div class='skill' >
+                                    <h4>English</h4>
 									<div class='skill-bar' data-percent='95' >
-										<div class='bar' >
-											<div class='percent' ></div>
+                                        <div class='bar' >
+                                            <div class='percent' ></div>
 										</div>
 									</div>
 								</div>
 							</div>
-							<div class='col-md-6' >
-								<div class='skill' >
-									<h4>Portuguese</h4>
-									<div class='skill-bar' data-percent='62' >
-										<div class='bar' >
-											<div class='percent' ></div>
-										</div>
-									</div>
-								</div>
-							</div>
+                            <div class='col-md-6' >
+                                <div class='skill' >
+                                    <h4>Portuguese</h4>
+                                    <div class='skill-bar' data-percent='62' >
+                                        <div class='bar' >
+                                            <div class='percent' ></div>
+                                        </div>
+                                    </div>
+                                </div>
+                            </div>
 						</div>
 					</div>
 				</div>
