--- a/portfolio.html
+++ b/portfolio.html
@@ -15,6 +15,7 @@
 		<link rel='stylesheet' type='text/css' href='css/color-blue.css' >
 		<link rel="icon" href="img/favicon.png" type="image/x-icon">
 		<link rel="stylesheet" href="https://necolas.github.io/normalize.css/8.0.1/normalize.css">
+        <script src="https://code.iconify.design/iconify-icon/1.0.7/iconify-icon.min.js"></script>
 	</head>
 	<body>
 		<a href='index.html' class='close-btn' >
@@ -46,7 +47,7 @@
 								<li><a href='#' data-group='sass'><i class='ion-social-sass'></i></a></li>
 								<li><a href='#' data-group='javascript'><i class='ion-social-javascript'></i></a></li>
 								<li><a href='#' data-group='python'><i class='ion-social-python'></i></a></li>
-								<li><a href='#' data-group='other'><i class='ion-laptop'></i></a></li>
+								<li><a href='#' data-group='vscode'><iconify-icon icon="devicon-plain:vscode"></iconify-icon></a></li>
 							</ul>
 						</div>
 						<div id='portfolio-grid' class='portfolio-items' >
@@ -320,7 +321,7 @@
 									</div>
 								</div>
 							</div>
-							<div class='item' data-groups='["all","other"]' >
+							<div class='item' data-groups='["all","vscode"]' >
 								<div class='inner' >
 									<img alt='vscodetheme' src='img/portfolio/vscode.png' >
 									<div class='caption' >
