--- a/portfolio.html
+++ b/portfolio.html
@@ -47,7 +47,7 @@
 								<li><a href='#' data-group='sass'><i class='ion-social-sass'></i></a></li>
 								<li><a href='#' data-group='javascript'><i class='ion-social-javascript'></i></a></li>
 								<li><a href='#' data-group='python'><i class='ion-social-python'></i></a></li>
-								<li><a href='#' data-group='vscode'><iconify-icon icon="devicon-plain:vscode"></iconify-icon></a></li>
+								<li><a href='#' data-group='vscode'><iconify-icon icon="akar-icons:vscode-fill"></iconify-icon></a></li>
 							</ul>
 						</div>
 						<div id='portfolio-grid' class='portfolio-items' >
