--- a/cert.html
+++ b/cert.html
@@ -16,6 +16,7 @@
 		<script src="https://code.iconify.design/iconify-icon/1.0.7/iconify-icon.min.js"></script>
 		<link rel="icon" href="img/favicon.png" type="image/x-icon">
 		<link rel="stylesheet" href="https://necolas.github.io/normalize.css/8.0.1/normalize.css">
+        <script src="https://code.iconify.design/iconify-icon/1.0.7/iconify-icon.min.js"></script>
 	</head>
 	<body>
 		<a href='index.html' class='close-btn' >
@@ -43,10 +44,10 @@
 						<div id='portfolio-filters'>
 							<ul>
 								<li><a href='#' data-group='all' class='active' >All</a></li>
-								<li><a href='#' data-group='microsoft'><i class='ion-social-windows'></i></a></li>
+								<li><a href='#' data-group='microsoft'><iconify-icon icon="uil:windows"></iconify-icon></a></li>
 								<li><a href='#' data-group='udemy'><iconify-icon icon="simple-icons:udemy"></iconify-icon></a></li>
-								<li><a href='#' data-group='codfas'><iconify-icon icon="ion-android-globe"></iconify-icon></a></li>
-								<li><a href='#' data-group='other'>Other</a></li>
+								<li><a href='#' data-group='codfas'><iconify-icon icon="emojione-monotone:computer-mouse"></iconify-icon></a></li>
+								<li><a href='#' data-group='other'><iconify-icon icon="material-symbols-light:other-admission-outline-rounded"></iconify-icon></a></li>
 							</ul>
 						</div>
 						<div id='portfolio-grid' class='portfolio-items' >
