--- a/portfolio.html
+++ b/portfolio.html
@@ -43,11 +43,11 @@
 						<div id='portfolio-filters'>
 							<ul>
 								<li><a href='#' data-group='all' class='active' >All</a></li>
-								<li><a href='#' data-group='htmlcss'><i class='ion-social-html5'></i>&<i class='ion-social-css3'></i></a></li>
-								<li><a href='#' data-group='sass'><i class='ion-social-sass'></i></a></li>
-								<li><a href='#' data-group='javascript'><i class='ion-social-javascript'></i></a></li>
-								<li><a href='#' data-group='python'><i class='ion-social-python'></i></a></li>
-								<li><a href='#' data-group='vscode'><iconify-icon icon="akar-icons:vscode-fill"></iconify-icon></a></li>
+								<li><a href='#' data-group='htmlcss'><iconify-icon icon="akar-icons:html-fill"></iconify-icon>&<iconify-icon icon="akar-icons:css-fill"></iconify-icon>a></li>
+								<li><a href='#' data-group='sass'><iconify-icon icon="fontisto:sass"></iconify-icon></a></li>
+								<li><a href='#' data-group='javascript'><iconify-icon icon="ri:javascript-fill"></iconify-icon></a></li>
+								<li><a href='#' data-group='python'><iconify-icon icon="simple-icons:python"></iconify-icon></a></li>
+								<li><a href='#' data-group='vscode'><iconify-icon icon="devicon-plain:vscode"></iconify-icon></a></li>
 							</ul>
 						</div>
 						<div id='portfolio-grid' class='portfolio-items' >
