--- a/Projects/pizza.html
+++ b/Projects/pizza.html
@@ -14,6 +14,7 @@
 		<link rel='stylesheet' type='text/css' href='../css/color-default.css' >
 		<link rel="icon" href="../img/favicon.png" type="image/x-icon">
 		<link rel="stylesheet" href="https://necolas.github.io/normalize.css/8.0.1/normalize.css">
+        <script src="https://code.iconify.design/iconify-icon/1.0.7/iconify-icon.min.js"></script>
 	</head>
 	<body>
 		<a href='../portfolio.html' class='close-btn' >
@@ -42,7 +43,7 @@
 								</li>
 								<li>
 									<h4><i class="bi bi-filetype-js"></i>Category</h4>
-									<p><i class='ion-social-html5'></i>  <i class='ion-social-css3'></i></p>
+									<p><iconify-icon icon="akar-icons:html-fill" class='iconosproyectos'></iconify-icon> <iconify-icon icon="akar-icons:css-fill" class='iconosproyectos'></iconify-icon></p>
 								</li>
 								<li>
 									<h4>The Code:</h4>
