--- a/portfolio.html
+++ b/portfolio.html
@@ -43,7 +43,7 @@
 						<div id='portfolio-filters'>
 							<ul>
 								<li><a href='#' data-group='all' class='active' >All</a></li>
-								<li><a href='#' data-group='htmlcss'><iconify-icon icon="akar-icons:html-fill"></iconify-icon>&<iconify-icon icon="akar-icons:css-fill"></iconify-icon>a></li>
+								<li><a href='#' data-group='htmlcss'><iconify-icon icon="akar-icons:html-fill"></iconify-icon>&<iconify-icon icon="akar-icons:css-fill"></iconify-icon></a></li>
 								<li><a href='#' data-group='sass'><iconify-icon icon="fontisto:sass"></iconify-icon></a></li>
 								<li><a href='#' data-group='javascript'><iconify-icon icon="ri:javascript-fill"></iconify-icon></a></li>
 								<li><a href='#' data-group='python'><iconify-icon icon="simple-icons:python"></iconify-icon></a></li>
